--- a/requirements.txt
+++ b/requirements.txt
@@ -1,127 +1,2 @@
 # DeepMyco: Large Language Models for Scaling Mycoremediation
-# Requirements file for Python dependencies
-
-# Core Data Science Stack
-numpy>=1.21.0
-pandas>=1.5.0
-scipy>=1.9.0
-matplotlib>=3.5.0
-seaborn>=0.11.0
-plotly>=5.0.0
-
-# Machine Learning
-scikit-learn>=1.1.0
-xgboost>=1.6.0
-lightgbm>=3.3.0
-joblib>=1.2.0
-
-# Deep Learning (for potential LSTM models)
-torch>=1.12.0
-tensorflow>=2.9.0
-
-# Data Processing and File Handling
-openpyxl>=3.0.0
-xlrd>=2.0.0
-PyPDF2>=3.0.0
-python-docx>=0.8.11
-beautifulsoup4>=4.11.0
-lxml>=4.9.0
-requests>=2.28.0
-
-# LLM and API Integration
-openai>=1.0.0
-anthropic>=0.7.0
-google-generativeai>=0.3.0
-tiktoken>=0.4.0
-
-# Web Scraping and Data Collection
-scrapy>=2.6.0
-selenium>=4.5.0
-requests-html>=0.10.0
-
-# Scientific Computing and Spectroscopy
-spectral>=0.22
-pyspectra>=1.0.0
-
-# Statistics and Analysis
-statsmodels>=0.13.0
-pingouin>=0.5.0
-scipy>=1.9.0
-
-# Visualization and Plotting
-plotly>=5.0.0
-bokeh>=2.4.0
-altair>=4.2.0
-wordcloud>=1.9.0
-
-# Jupyter and Interactive Development
-jupyter>=1.0.0
-jupyterlab>=3.4.0
-ipywidgets>=8.0.0
-notebook>=6.4.0
-
-# Configuration and Environment
-python-dotenv>=0.20.0
-pyyaml>=6.0
-configparser>=5.3.0
-click>=8.1.0
-
-# Testing and Quality Assurance
-pytest>=7.1.0
-pytest-cov>=4.0.0
-black>=22.6.0
-flake8>=5.0.0
-isort>=5.10.0
-
-# Documentation
-sphinx>=5.0.0
-sphinx-rtd-theme>=1.0.0
-myst-parser>=0.18.0
-
-# Database and Storage
-sqlalchemy>=1.4.0
-sqlite3
-
-# Utility Libraries
-tqdm>=4.64.0
-python-dateutil>=2.8.0
-pytz>=2022.2
-regex>=2022.7.0
-
-# Image Processing (for plant growth analysis)
-pillow>=9.2.0
-opencv-python>=4.6.0
-imageio>=2.21.0
-
-# Network and API
-urllib3>=1.26.0
-certifi>=2022.6.15
-
-# Logging and Monitoring
-loguru>=0.6.0
-
-# Development and Debugging
-ipdb>=0.13.0
-memory-profiler>=0.60.0
-
-# Optional: For advanced time series analysis
-prophet>=1.1.0
-pmdarima>=2.0.0
-
-# Optional: For advanced NLP preprocessing
-nltk>=3.7
-spacy>=3.4.0
-textblob>=0.17.0
-
-# Optional: For parallel processing
-multiprocessing-logging>=0.3.0
-concurrent-futures>=3.1.0
-
-# Optional: For cloud deployment
-boto3>=1.24.0
-google-cloud-storage>=2.5.0
-
-# Version constraints for stability
-setuptools>=65.0.0
-wheel>=0.37.0
-pip>=22.0.0
+# Requirements file for Python dependencies - please check each code file for dependencies
